fixed scrolling issue on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -303,9 +303,8 @@ input, select, textarea {
 
 /* ScrollBox */
 	#scrollbox {
-		overflow: scroll;
-		width: 35rem;
-		height: 20rem;
+		overflow: auto;
+		max-height: 20rem;
 	}
 
 /* Scrollbar Styles */
